--- a/tablesoft-java/TableSoftServices/nbproject/project.properties
+++ b/tablesoft-java/TableSoftServices/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.mysql-connector-java-8.0.20.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\mysql-connector-java-8.0.20.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +42,8 @@ j2ee.server.type=gfv5ee8
 jar.compress=false
 javac.classpath=\
     ${reference.TableSoftController.jar}:\
-    ${reference.TableSoftModel.jar}
+    ${reference.TableSoftModel.jar}:\
+    ${file.reference.mysql-connector-java-8.0.20.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
