--- a/tablesoft-java/TableSoftServices/nbproject/project.properties
+++ b/tablesoft-java/TableSoftServices/nbproject/project.properties
@@ -43,7 +43,8 @@ jar.compress=false
 javac.classpath=\
     ${reference.TableSoftController.jar}:\
     ${reference.TableSoftModel.jar}:\
-    ${file.reference.mysql-connector-java-8.0.20.jar}
+    ${file.reference.mysql-connector-java-8.0.20.jar}:\
+    ${libs.metro.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
