--- a/tablesoft-java/TableSoftServices/web/WEB-INF/web.xml
+++ b/tablesoft-java/TableSoftServices/web/WEB-INF/web.xml
@@ -8,9 +8,18 @@
         <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+    <servlet>
+        <servlet-name>PaisWS</servlet-name>
+        <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RolWS</servlet-name>
         <url-pattern>/RolWS</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PaisWS</servlet-name>
+        <url-pattern>/PaisWS</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
