--- a/tablesoft-java/TableSoftServices/web/WEB-INF/web.xml
+++ b/tablesoft-java/TableSoftServices/web/WEB-INF/web.xml
@@ -23,6 +23,11 @@
         <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+    <servlet>
+        <servlet-name>CategoriaWS</servlet-name>
+        <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RolWS</servlet-name>
         <url-pattern>/RolWS</url-pattern>
@@ -38,6 +43,10 @@
     <servlet-mapping>
         <servlet-name>ActivoFijoWS</servlet-name>
         <url-pattern>/ActivoFijoWS</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CategoriaWS</servlet-name>
+        <url-pattern>/CategoriaWS</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
