--- a/tablesoft-java/TableSoftServices/web/WEB-INF/web.xml
+++ b/tablesoft-java/TableSoftServices/web/WEB-INF/web.xml
@@ -38,6 +38,26 @@
         <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+    <servlet>
+        <servlet-name>TareaWS</servlet-name>
+        <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet>
+        <servlet-name>CiudadWS</servlet-name>
+        <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet>
+        <servlet-name>EstadoTicketWS</servlet-name>
+        <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet>
+        <servlet-name>ProveedorWS</servlet-name>
+        <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RolWS</servlet-name>
         <url-pattern>/RolWS</url-pattern>
@@ -65,6 +85,22 @@
     <servlet-mapping>
         <servlet-name>EquipoWS</servlet-name>
         <url-pattern>/EquipoWS</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>TareaWS</servlet-name>
+        <url-pattern>/TareaWS</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CiudadWS</servlet-name>
+        <url-pattern>/CiudadWS</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EstadoTicketWS</servlet-name>
+        <url-pattern>/EstadoTicketWS</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ProveedorWS</servlet-name>
+        <url-pattern>/ProveedorWS</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
