--- a/tablesoft-java/TableSoftServices/nbproject/project.properties
+++ b/tablesoft-java/TableSoftServices/nbproject/project.properties
@@ -25,6 +25,7 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.20.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\mysql-connector-java-8.0.20.jar
 includes=**
@@ -70,7 +71,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 project.TableSoftController=../TableSoftController
