Add minor visual changes
Las imágenes en formato PNG plus y minus se han renombrado a Plus y Minus, respectivamente y movido a la carpeta images del proyecto. La carpeta vacía Resources se ha eliminado. Ahora se muestra un botón de ver contraseña en InicioSesion.

--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -1057,6 +1057,8 @@
     <None Include="packages.config" />
     <None Include="Resources\plus.png" />
     <None Include="Resources\minus.png" />
+    <None Include="images\Minus.png" />
+    <None Include="images\Plus.png" />
     <Content Include="tslogo.ico" />
   </ItemGroup>
   <ItemGroup>
