--- a/tablesoft-java/TableSoftReports/nbproject/project.properties
+++ b/tablesoft-java/TableSoftReports/nbproject/project.properties
@@ -114,7 +114,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=TableSoftReports
-main.class=tablesoftreports.TableSoftReports
+main.class=pe.edu.pucp.tablesoft.main.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
