--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -168,11 +168,11 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="Estado.cs" />
-    <Compile Include="frmActualizarEstadoTicketAgente.cs">
+    <Compile Include="frmCerrarTicketAgente.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmActualizarEstadoTicketAgente.Designer.cs">
-      <DependentUpon>frmActualizarEstadoTicketAgente.cs</DependentUpon>
+    <Compile Include="frmCerrarTicketAgente.Designer.cs">
+      <DependentUpon>frmCerrarTicketAgente.cs</DependentUpon>
     </Compile>
     <Compile Include="frmAyuda.cs">
       <SubType>Form</SubType>
@@ -447,8 +447,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="frmActualizarEstadoTicketAgente.resx">
-      <DependentUpon>frmActualizarEstadoTicketAgente.cs</DependentUpon>
+    <EmbeddedResource Include="frmCerrarTicketAgente.resx">
+      <DependentUpon>frmCerrarTicketAgente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmAyuda.resx">
       <DependentUpon>frmAyuda.cs</DependentUpon>
