--- a/tablesoft-java/TableSoftServicesTest/nbproject/project.properties
+++ b/tablesoft-java/TableSoftServicesTest/nbproject/project.properties
@@ -26,7 +26,27 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.commons-beanutils-1.9.3.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\commons-beanutils-1.9.3.jar
+file.reference.commons-digester-2.1.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\commons-digester-2.1.jar
+file.reference.itext-2.1.7.js7.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\itext-2.1.7.js7.jar
+file.reference.jasperreports-6.10.0.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\jasperreports-6.10.0.jar
+file.reference.jasperreports-annotation-processors-6.10.0.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\jasperreports-annotation-processors-6.10.0.jar
+file.reference.jasperreports-chart-customizers-6.10.0.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\jasperreports-chart-customizers-6.10.0.jar
+file.reference.jasperreports-chart-themes-6.10.0.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\jasperreports-chart-themes-6.10.0.jar
+file.reference.jasperreports-custom-visualization-6.10.0.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\jasperreports-custom-visualization-6.10.0.jar
+file.reference.jasperreports-fonts-6.10.0.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\jasperreports-fonts-6.10.0.jar
+file.reference.jasperreports-functions-6.10.0.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\jasperreports-functions-6.10.0.jar
+file.reference.jasperreports-metadata-6.10.0.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\jasperreports-metadata-6.10.0.jar
+file.reference.javax.servlet-3.0.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\javax.servlet-3.0.jar
+file.reference.joda-time_2.9.9.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\joda-time_2.9.9.jar
+file.reference.js-extra-classes.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\js-extra-classes.jar
 file.reference.mysql-connector-java-8.0.20.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\mysql-connector-java-8.0.20.jar
+file.reference.org.apache.commons.commons-collections4_4.2.0.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\org.apache.commons.commons-collections4_4.2.0.jar
+file.reference.org.apache.commons.logging_1.2.0.v20180409-1502.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\org.apache.commons.logging_1.2.0.v20180409-1502.jar
+file.reference.org.jfree.chart-osgi_1.0.19.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\org.jfree.chart-osgi_1.0.19.jar
+file.reference.org.jfree.jcommon-osgi_1.0.23.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\org.jfree.jcommon-osgi_1.0.23.jar
+file.reference.spring-beans-5.1.4.RELEASE.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\spring-beans-5.1.4.RELEASE.jar
+file.reference.spring-core-5.1.4.RELEASE.jar=src\\java\\pe\\edu\\pucp\\tablesoft\\lib\\spring-core-5.1.4.RELEASE.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,7 +63,27 @@ jar.compress=false
 javac.classpath=\
     ${reference.TableSoftController.jar}:\
     ${reference.TableSoftModel.jar}:\
-    ${file.reference.mysql-connector-java-8.0.20.jar}
+    ${file.reference.mysql-connector-java-8.0.20.jar}:\
+    ${file.reference.commons-beanutils-1.9.3.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.itext-2.1.7.js7.jar}:\
+    ${file.reference.jasperreports-6.10.0.jar}:\
+    ${file.reference.jasperreports-annotation-processors-6.10.0.jar}:\
+    ${file.reference.jasperreports-chart-customizers-6.10.0.jar}:\
+    ${file.reference.jasperreports-chart-themes-6.10.0.jar}:\
+    ${file.reference.jasperreports-custom-visualization-6.10.0.jar}:\
+    ${file.reference.jasperreports-fonts-6.10.0.jar}:\
+    ${file.reference.jasperreports-functions-6.10.0.jar}:\
+    ${file.reference.jasperreports-metadata-6.10.0.jar}:\
+    ${file.reference.javax.servlet-3.0.jar}:\
+    ${file.reference.joda-time_2.9.9.jar}:\
+    ${file.reference.js-extra-classes.jar}:\
+    ${file.reference.org.apache.commons.commons-collections4_4.2.0.jar}:\
+    ${file.reference.org.apache.commons.logging_1.2.0.v20180409-1502.jar}:\
+    ${file.reference.org.jfree.chart-osgi_1.0.19.jar}:\
+    ${file.reference.org.jfree.jcommon-osgi_1.0.23.jar}:\
+    ${file.reference.spring-beans-5.1.4.RELEASE.jar}:\
+    ${file.reference.spring-core-5.1.4.RELEASE.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
