--- a/tablesoft-net/TableSoft/TableSoft/App.config
+++ b/tablesoft-net/TableSoft/TableSoft/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
@@ -26,57 +26,39 @@
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/UrgenciaWS"
-                binding="basicHttpBinding" bindingConfiguration="UrgenciaWSPortBinding"
-                contract="UrgenciaWS.UrgenciaWS" name="UrgenciaWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/BibliotecaWS"
-                binding="basicHttpBinding" bindingConfiguration="BibliotecaWSPortBinding"
-                contract="BibliotecaWS.BibliotecaWS" name="BibliotecaWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/CategoriaWS"
-                binding="basicHttpBinding" bindingConfiguration="CategoriaWSPortBinding"
-                contract="CategoriaWS.CategoriaWS" name="CategoriaWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/EmpleadoWS"
-                binding="basicHttpBinding" bindingConfiguration="EmpleadoWSPortBinding"
-                contract="EmpleadoWS.EmpleadoWS" name="EmpleadoWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/RolWS"
-                binding="basicHttpBinding" bindingConfiguration="RolWSPortBinding"
-                contract="RolWS.RolWS" name="RolWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/TicketWS"
-                binding="basicHttpBinding" bindingConfiguration="TicketWSPortBinding"
-                contract="TicketWS.TicketWS" name="TicketWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/ActivoFijoWS"
-                binding="basicHttpBinding" bindingConfiguration="ActivoFijoWSPortBinding"
-                contract="ActivoFijoWS.ActivoFijoWS" name="ActivoFijoWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/CiudadWS"
-                binding="basicHttpBinding" bindingConfiguration="CiudadWSPortBinding"
-                contract="CiudadWS.CiudadWS" name="CiudadWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/ComentarioWS"
-                binding="basicHttpBinding" bindingConfiguration="ComentarioWSPortBinding"
-                contract="ComentarioWS.ComentarioWS" name="ComentarioWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/EquipoWS"
-                binding="basicHttpBinding" bindingConfiguration="EquipoWSPortBinding"
-                contract="EquipoWS.EquipoWS" name="EquipoWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/EstadoTicketWS"
-                binding="basicHttpBinding" bindingConfiguration="EstadoTicketWSPortBinding"
-                contract="EstadoTicketWS.EstadoTicketWS" name="EstadoTicketWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/ProveedorWS"
-                binding="basicHttpBinding" bindingConfiguration="ProveedorWSPortBinding"
-                contract="ProveedorWS.ProveedorWS" name="ProveedorWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/PaisWS"
-                binding="basicHttpBinding" bindingConfiguration="PaisWSPortBinding"
-                contract="PaisWS.PaisWS" name="PaisWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/TareaWS"
-                binding="basicHttpBinding" bindingConfiguration="TareaWSPortBinding"
-                contract="TareaWS.TareaWS" name="TareaWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/TareaPredeterminadaWS"
-                binding="basicHttpBinding" bindingConfiguration="TareaPredeterminadaWSPortBinding"
-                contract="TareaPredeterminadaWS.TareaPredeterminadaWS" name="TareaPredeterminadaWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/AgenteWS"
-                binding="basicHttpBinding" bindingConfiguration="AgenteWSPortBinding"
-                contract="AgenteWS.AgenteWS" name="AgenteWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/PersonaWS"
-                binding="basicHttpBinding" bindingConfiguration="PersonaWSPortBinding"
-                contract="PersonaWS.PersonaWS" name="PersonaWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/UrgenciaWS" binding="basicHttpBinding" bindingConfiguration="UrgenciaWSPortBinding" contract="UrgenciaWS.UrgenciaWS" name="UrgenciaWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/BibliotecaWS" binding="basicHttpBinding" bindingConfiguration="BibliotecaWSPortBinding" contract="BibliotecaWS.BibliotecaWS" name="BibliotecaWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/CategoriaWS" binding="basicHttpBinding" bindingConfiguration="CategoriaWSPortBinding" contract="CategoriaWS.CategoriaWS" name="CategoriaWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/EmpleadoWS" binding="basicHttpBinding" bindingConfiguration="EmpleadoWSPortBinding" contract="EmpleadoWS.EmpleadoWS" name="EmpleadoWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/RolWS" binding="basicHttpBinding" bindingConfiguration="RolWSPortBinding" contract="RolWS.RolWS" name="RolWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/TicketWS" binding="basicHttpBinding" bindingConfiguration="TicketWSPortBinding" contract="TicketWS.TicketWS" name="TicketWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/ActivoFijoWS" binding="basicHttpBinding" bindingConfiguration="ActivoFijoWSPortBinding" contract="ActivoFijoWS.ActivoFijoWS" name="ActivoFijoWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/CiudadWS" binding="basicHttpBinding" bindingConfiguration="CiudadWSPortBinding" contract="CiudadWS.CiudadWS" name="CiudadWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/ComentarioWS" binding="basicHttpBinding" bindingConfiguration="ComentarioWSPortBinding" contract="ComentarioWS.ComentarioWS" name="ComentarioWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/EquipoWS" binding="basicHttpBinding" bindingConfiguration="EquipoWSPortBinding" contract="EquipoWS.EquipoWS" name="EquipoWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/EstadoTicketWS" binding="basicHttpBinding" bindingConfiguration="EstadoTicketWSPortBinding" contract="EstadoTicketWS.EstadoTicketWS" name="EstadoTicketWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/ProveedorWS" binding="basicHttpBinding" bindingConfiguration="ProveedorWSPortBinding" contract="ProveedorWS.ProveedorWS" name="ProveedorWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/PaisWS" binding="basicHttpBinding" bindingConfiguration="PaisWSPortBinding" contract="PaisWS.PaisWS" name="PaisWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/TareaWS" binding="basicHttpBinding" bindingConfiguration="TareaWSPortBinding" contract="TareaWS.TareaWS" name="TareaWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/TareaPredeterminadaWS" binding="basicHttpBinding" bindingConfiguration="TareaPredeterminadaWSPortBinding" contract="TareaPredeterminadaWS.TareaPredeterminadaWS" name="TareaPredeterminadaWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/AgenteWS" binding="basicHttpBinding" bindingConfiguration="AgenteWSPortBinding" contract="AgenteWS.AgenteWS" name="AgenteWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/PersonaWS" binding="basicHttpBinding" bindingConfiguration="PersonaWSPortBinding" contract="PersonaWS.PersonaWS" name="PersonaWSPort" />
         </client>
     </system.serviceModel>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="BouncyCastle.Crypto" publicKeyToken="0e99375e54769942" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.8.6.0" newVersion="1.8.6.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Apis" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.47.0.0" newVersion="1.47.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Apis.Core" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.47.0.0" newVersion="1.47.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
