--- a/tablesoft-net/TableSoft/TableSoft/App.config
+++ b/tablesoft-net/TableSoft/TableSoft/App.config
@@ -23,26 +23,64 @@
                 <binding name="PaisWSPortBinding" />
                 <binding name="TareaWSPortBinding" />
                 <binding name="TareaPredeterminadaWSPortBinding" />
+                <binding name="ReporteWSPortBinding" />
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/ActivoFijoWS" binding="basicHttpBinding" bindingConfiguration="ActivoFijoWSPortBinding" contract="ActivoFijoWS.ActivoFijoWS" name="ActivoFijoWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/AgenteWS" binding="basicHttpBinding" bindingConfiguration="AgenteWSPortBinding" contract="AgenteWS.AgenteWS" name="AgenteWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/BibliotecaWS" binding="basicHttpBinding" bindingConfiguration="BibliotecaWSPortBinding" contract="BibliotecaWS.BibliotecaWS" name="BibliotecaWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/CategoriaWS" binding="basicHttpBinding" bindingConfiguration="CategoriaWSPortBinding" contract="CategoriaWS.CategoriaWS" name="CategoriaWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/CiudadWS" binding="basicHttpBinding" bindingConfiguration="CiudadWSPortBinding" contract="CiudadWS.CiudadWS" name="CiudadWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/ComentarioWS" binding="basicHttpBinding" bindingConfiguration="ComentarioWSPortBinding" contract="ComentarioWS.ComentarioWS" name="ComentarioWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/EmpleadoWS" binding="basicHttpBinding" bindingConfiguration="EmpleadoWSPortBinding" contract="EmpleadoWS.EmpleadoWS" name="EmpleadoWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/EquipoWS" binding="basicHttpBinding" bindingConfiguration="EquipoWSPortBinding" contract="EquipoWS.EquipoWS" name="EquipoWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/EstadoTicketWS" binding="basicHttpBinding" bindingConfiguration="EstadoTicketWSPortBinding" contract="EstadoTicketWS.EstadoTicketWS" name="EstadoTicketWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/PaisWS" binding="basicHttpBinding" bindingConfiguration="PaisWSPortBinding" contract="PaisWS.PaisWS" name="PaisWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/PersonaWS" binding="basicHttpBinding" bindingConfiguration="PersonaWSPortBinding" contract="PersonaWS.PersonaWS" name="PersonaWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/ProveedorWS" binding="basicHttpBinding" bindingConfiguration="ProveedorWSPortBinding" contract="ProveedorWS.ProveedorWS" name="ProveedorWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/RolWS" binding="basicHttpBinding" bindingConfiguration="RolWSPortBinding" contract="RolWS.RolWS" name="RolWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/TareaPredeterminadaWS" binding="basicHttpBinding" bindingConfiguration="TareaPredeterminadaWSPortBinding" contract="TareaPredeterminadaWS.TareaPredeterminadaWS" name="TareaPredeterminadaWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/TareaWS" binding="basicHttpBinding" bindingConfiguration="TareaWSPortBinding" contract="TareaWS.TareaWS" name="TareaWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/TicketWS" binding="basicHttpBinding" bindingConfiguration="TicketWSPortBinding" contract="TicketWS.TicketWS" name="TicketWSPort" />
-            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/UrgenciaWS" binding="basicHttpBinding" bindingConfiguration="UrgenciaWSPortBinding" contract="UrgenciaWS.UrgenciaWS" name="UrgenciaWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/ActivoFijoWS"
+                binding="basicHttpBinding" bindingConfiguration="ActivoFijoWSPortBinding"
+                contract="ActivoFijoWS.ActivoFijoWS" name="ActivoFijoWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/AgenteWS"
+                binding="basicHttpBinding" bindingConfiguration="AgenteWSPortBinding"
+                contract="AgenteWS.AgenteWS" name="AgenteWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/BibliotecaWS"
+                binding="basicHttpBinding" bindingConfiguration="BibliotecaWSPortBinding"
+                contract="BibliotecaWS.BibliotecaWS" name="BibliotecaWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/CategoriaWS"
+                binding="basicHttpBinding" bindingConfiguration="CategoriaWSPortBinding"
+                contract="CategoriaWS.CategoriaWS" name="CategoriaWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/CiudadWS"
+                binding="basicHttpBinding" bindingConfiguration="CiudadWSPortBinding"
+                contract="CiudadWS.CiudadWS" name="CiudadWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/ComentarioWS"
+                binding="basicHttpBinding" bindingConfiguration="ComentarioWSPortBinding"
+                contract="ComentarioWS.ComentarioWS" name="ComentarioWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/EmpleadoWS"
+                binding="basicHttpBinding" bindingConfiguration="EmpleadoWSPortBinding"
+                contract="EmpleadoWS.EmpleadoWS" name="EmpleadoWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/EquipoWS"
+                binding="basicHttpBinding" bindingConfiguration="EquipoWSPortBinding"
+                contract="EquipoWS.EquipoWS" name="EquipoWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/EstadoTicketWS"
+                binding="basicHttpBinding" bindingConfiguration="EstadoTicketWSPortBinding"
+                contract="EstadoTicketWS.EstadoTicketWS" name="EstadoTicketWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/PaisWS"
+                binding="basicHttpBinding" bindingConfiguration="PaisWSPortBinding"
+                contract="PaisWS.PaisWS" name="PaisWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/PersonaWS"
+                binding="basicHttpBinding" bindingConfiguration="PersonaWSPortBinding"
+                contract="PersonaWS.PersonaWS" name="PersonaWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/ProveedorWS"
+                binding="basicHttpBinding" bindingConfiguration="ProveedorWSPortBinding"
+                contract="ProveedorWS.ProveedorWS" name="ProveedorWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/RolWS"
+                binding="basicHttpBinding" bindingConfiguration="RolWSPortBinding"
+                contract="RolWS.RolWS" name="RolWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/TareaPredeterminadaWS"
+                binding="basicHttpBinding" bindingConfiguration="TareaPredeterminadaWSPortBinding"
+                contract="TareaPredeterminadaWS.TareaPredeterminadaWS" name="TareaPredeterminadaWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/TareaWS"
+                binding="basicHttpBinding" bindingConfiguration="TareaWSPortBinding"
+                contract="TareaWS.TareaWS" name="TareaWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/TicketWS"
+                binding="basicHttpBinding" bindingConfiguration="TicketWSPortBinding"
+                contract="TicketWS.TicketWS" name="TicketWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/UrgenciaWS"
+                binding="basicHttpBinding" bindingConfiguration="UrgenciaWSPortBinding"
+                contract="UrgenciaWS.UrgenciaWS" name="UrgenciaWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/ReporteWS"
+                binding="basicHttpBinding" bindingConfiguration="ReporteWSPortBinding"
+                contract="ReporteWS.ReporteWS" name="ReporteWSPort" />
         </client>
     </system.serviceModel>
   <runtime>
