--- a/tablesoft-net/TableSoft/TableSoft/App.config
+++ b/tablesoft-net/TableSoft/TableSoft/App.config
@@ -24,6 +24,7 @@
                 <binding name="TareaWSPortBinding" />
                 <binding name="TareaPredeterminadaWSPortBinding" />
                 <binding name="ReporteWSPortBinding" />
+                <binding name="ReporteWSPortBinding1" />
             </basicHttpBinding>
         </bindings>
         <client>
@@ -81,6 +82,9 @@
             <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/TicketWS"
                 binding="basicHttpBinding" bindingConfiguration="TicketWSPortBinding"
                 contract="TicketWS.TicketWS" name="TicketWSPort" />
+            <endpoint address="http://23.22.97.25:8080/TableSoftServicesTest/ReporteWS"
+                binding="basicHttpBinding" bindingConfiguration="ReporteWSPortBinding1"
+                contract="ReporteWS.ReporteWS" name="ReporteWSPort1" />
         </client>
     </system.serviceModel>
   <runtime>
